--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Stopwatch">
+        <activity android:name=".mainPage"></activity>
+
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/strings" />
 
-        <activity android:name="com.example.stopwatch.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
