--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Stopwatch">
-        <activity android:name=".mainPage"></activity>
+        <activity android:name=".NewTasks"></activity>
+        <activity android:name=".Timer" />
 
         <meta-data
             android:name="com.google.android.actions"
